2002-08-08  Mikael Hallendal  <micke@codefactory.se>

	* src/devhelp-marshal.*: Changed to dh-marshal.*

	* src/devhelp-search.[ch]: Changed into dh-search.[ch]

	* src/util.[ch]: Changed into dh-util.[ch]

	* src/history.[ch]: Changed into dh-history.[ch]
	
	* src/devhelp-window.[ch]: Changed into dh-window.[ch]

	* src/devhelp-view.[ch]: Changed into dh-view.[ch]

	* src/dh-bookshelf.[ch]: 
	- Changed name from bookshelf.[ch]
	- Bookshelf -> DhBookshelf

	* src/Makefile.am:
	- Don't build install.[ch]
	- bookshelf.[ch] -> dh-bookshelf.[ch]

	* ui/GNOME_DevHelp_Controller.ui: removed book manager.

	* ui/GNOME_DevHelp.ui: removed zoom, view-sidebar, preferences.

	* src/devhelp-window.c: 
	- Removed the zoom-stuff, the preferences stuff. Gtkhtml2 now
	  follows theme settings.

	* src/devhelp-view.c:
	(view_idle_check_queue): don't grab focus. Doesn't work well with
	  the search entry.

	* src/Makefile.am: Don't build
	- bookmark-manager.[ch]
	- preferences.[ch]
	- preferences-dialog.[ch]

	* src/preferences.[ch]:
	* src/preferences-dialog.[ch]:
	- Removed
	
	* src/devhelp-window.c (cmd_about_cb): fixed jdahlin's email.

	* src/devhelp-view.c: 
	- Don't read with gnome_vfs_async. Read in a thread passing data
	  by a async queue. (same as in Yelp).
	- Work with anchor.
	- Probably leaking like **** while reading.

	* src/devhelp-controller.c (devhelp_controller_init): 
	- only connect to uri_selected once.

	* src/book.c (book_get_name_full): never return NULL. Fixes #84444

2002-07-30 Hasbullah Bin Pit <sebol@ikhlas.com>

	* configure.in: Added "ms" to LINGUAS for Malay.
        * po/ms.po: Added Malay translation.

2002-07-09  Wang Jian  <lark@linux.net.cn>

	* configure.in: Added "zh_CN" to LINGUAS for Simplified Chinese.

2002-05-18  Kjartan Maraas  <kmaraas@gnome.org>

	* ui/devhelp.glade2: Don't translate widget labels.
	
2002-05-08  Pablo Saratxaga  <pablo@mandrakesoft.com>

	* configure.in: Make ALL _LINGUAS in synch with files in po/ directory
